tests/cases/compiler/isLiteral1/index.ts
// From `github.com/microsoft/TypeScript/blob/v5.7.3/tests/cases/compiler/isLiteral1.ts`, Apache-2.0 License

var x: number = 02343;
//~^ ERROR: Octal literals are not allowed.